src/objects/Combat__c.object
<CustomObject>
    <fields>
        <fullName>AttackerSessionId__c</fullName>
        <formula>Attacker__r.Player__r.SessionId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AttackerSessionId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attacker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attacker</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Combat</relationshipLabel>
        <relationshipName>Combat</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defender</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Combat (Defender)</relationshipLabel>
        <relationshipName>Combat1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Combat</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Combat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Combat</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>